2009-02-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl/ChangeSet.cs:
	* MonoDevelop.VersionControl/CommitMessageStyle.cs:
	* MonoDevelop.VersionControl.Dialogs/CommitDialog.cs:
	* MonoDevelop.VersionControl/VersionControlService.cs: Fix
	  author info and commit message style defaults.

2009-02-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl/ChangeLogWriter.cs:
	* MonoDevelop.VersionControl/CommitMessageFormat.cs: Add
	  mechanism for appending newlines to the message.

2009-01-30  Michael Hutchinson  <mhutchinson@novell.com>

	* VersionControl.addin.xml: Register policy panel as a default policy
	panel.

2009-01-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.VersionControl/ChangeSet.cs:
	* MonoDevelop.VersionControl/ChangeLogWriter.cs:
	* MonoDevelop.VersionControl.Dialogs/VersionControlPolicyPanel.cs:
	* MonoDevelop.VersionControl.Dialogs/CommitMessageStylePanelWidget.cs:
	Rename UserInformation to AuthorInformation, and change other strings
	correspondingly.

	* MonoDevelop.VersionControl.mdp: Updated.

2009-01-29  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* Policies.xml:
	* gtk-gui/gui.stetic:
	* gtk-gui/objects.xml:
	* gtk-gui/generated.cs:
	* VersionControl.addin.xml:
	* MonoDevelop.VersionControl.mdp:
	* MonoDevelop.VersionControl/ChangeSet.cs:
	* MonoDevelop.VersionControl/ChangeLogWriter.cs:
	* MonoDevelop.VersionControl/CommitMessageStyle.cs:
	* MonoDevelop.VersionControl/CommitMessageFormat.cs:
	* MonoDevelop.VersionControl/VersionControlPolicy.cs:
	* MonoDevelop.VersionControl.Dialogs/CommitDialog.cs:
	* MonoDevelop.VersionControl/VersionControlService.cs:
	* MonoDevelop.VersionControl.Dialogs/VersionControlPolicyPanel.cs:
	* MonoDevelop.VersionControl.Dialogs/CommitMessageStylePanelWidget.cs:
	* gtk-gui/MonoDevelop.VersionControl.CommitMessageStylePanelWidget.cs:
	Added version control policy, which allows setting the commit message
	style.
